The custom card has been completed.

--- a/src/app/custom-card/components/card-header/card-header.component.html
+++ b/src/app/custom-card/components/card-header/card-header.component.html
@@ -1,1 +1,8 @@
-<p>card-header works!</p>
+<div class="header-container" [ngStyle]="{'justify-content': justify}">
+    <div class="title">
+        <ng-content select="c-card-title"></ng-content>
+    </div>
+    <div class="sub-title">
+        <ng-content select="c-card-sub-title"></ng-content>
+    </div>
+</div>
