--- a/src/app/custom-card/components/card/card.component.html
+++ b/src/app/custom-card/components/card/card.component.html
@@ -1,1 +1,8 @@
-<p>card works!</p>
+<div class="card-container">
+    <div class="card-header">
+        <ng-content select="c-card-header"></ng-content>
+    </div>
+    <div class="card-content">
+        <ng-content select="c-card-content"></ng-content>
+    </div>
+</div>
