The sample component has been refactored.

--- a/src/app/custom-navbar/samples/sample1/sample1.component.html
+++ b/src/app/custom-navbar/samples/sample1/sample1.component.html
@@ -1,26 +1,21 @@
 <cn-navbar isNavbarHeadUsed="true">
     <cn-navbar-item-head>
-        qwömpğqmpğqwm
+        X company
     </cn-navbar-item-head>
     <cn-navbar-item>
-        qmwopqmoqwowq <br>
-        qmwopqmoqwowq <br>
-        qmwopqmoqwowq <br>
+        Navbar 1 subpanel
     </cn-navbar-item>
     <cn-navbar-item>
-        qmwopqmoqwowq <br>
-
-        qmwopqmoqwowq <br>
+        Navbar 2 subpanel
     </cn-navbar-item>
     <cn-navbar-item>
-        qmwopqmoqwowq <br>
-        qmwopqmoqwowq <br>
-        qmwopqmoqwowq <br>
-        qmwopqmoqwowq <br>
-        qmwopqmoqwowq <br>
-        qmwopqmoqwowq <br>
+        Navbar 3 subpanel
 
     </cn-navbar-item>
-    <cn-navbar-item></cn-navbar-item>
+    <cn-navbar-item>@for (item of navbar4SubPanelItems; track $index) {
+        {{item}} <br>
+        }
+
+    </cn-navbar-item>
     <cn-navbar-item></cn-navbar-item>
 </cn-navbar>
