The custom modal component and sample have been added.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-sample1></app-sample1> -->
 
-<app-sample1></app-sample1>
+<!-- <app-sample1></app-sample1> -->
+<cm-sample1></cm-sample1>
