--- a/src/app/custom-modal/components/modal/modal.component.html
+++ b/src/app/custom-modal/components/modal/modal.component.html
@@ -1,16 +1,20 @@
-<div class="modal">
+<div class="modal"
+    [ngClass]="{'display-block':modalService.isModalVisible(),'display-none' : !modalService.isModalVisible()}">
     <div class="modal-content">
-       
+
         <div class="projected-content">
-           <ng-content></ng-content>
+            <ng-container #contentContainer></ng-container>
         </div>
         <div class="modal-actions">
-            <button class="modal-actions-ok">Ok</button>
-            <button class="modal-actions-cancel">Cancel</button>
+            <button class="modal-actions-ok" (click)="confirm()">Ok</button>
+            <button class="modal-actions-cancel" (click)="cancel()">Cancel</button>
         </div>
 
     </div>
     <div class="modal-backdrop">
     </div>
-
 </div>
+
+<ng-template #contentTemplate>
+    <ng-content></ng-content>
+</ng-template>
