--- a/src/app/custom-modal/components/modal/modal.component.scss
+++ b/src/app/custom-modal/components/modal/modal.component.scss
@@ -3,6 +3,7 @@
     width: 100%;
     height: 100%;
     z-index: 0;
+    display: none;
 }
 
 .modal-content {
@@ -52,4 +53,12 @@
 .modal-actions button {
     width: 30%;
     height: 60%;
+}
+
+.display-none {
+    display: none;
+}
+
+.display-block {
+    display: block;
 }
