--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!-- <app-sample1></app-sample1> -->
 
 <!-- <app-sample1></app-sample1> -->
-<cm-sample1></cm-sample1>
+<!-- <cm-sample1></cm-sample1> -->
+
+<fdd-sample1></fdd-sample1>
