The custom dialog has been improved.

--- a/src/app/full-dynamic-dialog/components/dialog-content1/dialog-content1.component.html
+++ b/src/app/full-dynamic-dialog/components/dialog-content1/dialog-content1.component.html
@@ -1,1 +1,7 @@
-<p>dialog-content1 works!</p>
+<h2>Hello World</h2>
+<br>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit veniam consequuntur voluptatum accusamus at? Deserunt
+    quos, incidunt dignissimos cumque, maxime corrupti laborum culpa cupiditate similique iste quibusdam voluptate quia
+    voluptatibus!</p>
+<br>
+<button (click)="dialogService.closeDialog()">Close dialog</button>
