The simple custom accordion has been added.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,21 @@
 <!-- <app-sample1></app-sample1> -->
 <!-- <cm-sample1></cm-sample1> -->
 
-<fdd-sample1></fdd-sample1>
+<!-- <fdd-sample1></fdd-sample1> -->
+<ca-accordion label="categories">
+    <ca-accordion label="furnitures">
+      wmopnewpnew <br>
+      wmopnewpnew <br>
+      wmopnewpnew <br>
+      wmopnewpnew <br>
+      wmopnewpnew <br>
+    </ca-accordion>
+    <ca-accordion label="phones">
+        wmopwnowe <br>
+        wmopwnowe <br>
+        wmopwnowe <br>
+    </ca-accordion>
+  
+</ca-accordion>
+
+
