The custom table component has been defined.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <!-- <cm-sample1></cm-sample1> -->
 
 <!-- <fdd-sample1></fdd-sample1> -->
-<ca-accordion label="categories">
+<!-- <ca-accordion label="categories">
     <ca-accordion label="furnitures">
       wmopnewpnew <br>
       wmopnewpnew <br>
@@ -18,6 +18,8 @@
         wmopwnowe <br>
     </ca-accordion>
   
-</ca-accordion>
+</ca-accordion> -->
 
+
+<ct-sample1></ct-sample1>
 
